display bugfix bug with selectboxes, overflow preventing content from displaying properly. Original file was wc-setup.css pictures taken with original filename.
http://zeroserieux.com/faveo/display-bug.png
http://zeroserieux.com/faveo/display-bug-fixed.png

--- a/public/lb-faveo/css/setup.css
+++ b/public/lb-faveo/css/setup.css
@@ -27,8 +27,6 @@ body {
 .setup-content {
     padding: 24px 24px 0;
     background: #fff;
-    overflow: hidden;
-    zoom: 1
 }
 
 .setup-content h1,
